# python-project-52

./: .gitignore  Makefile  README.md  build.sh  pyproject.toml  pytest.ini  ruff.toml
.github/workflows/: pyci.yml
task_manager/: mixins.py  settings.py  urls.py  views.py
task_manager/fixtures/: labels.json  statuses.json  tasks.json  test_labels.json  test_statuses.json  test_tasks.json  test_users.json  users.json
task_manager/labels/: forms.py  models.py  urls.py  views.py
task_manager/labels/migrations/: 0001_initial.py
task_manager/labels/templates/: labels_create.html  labels_delete.html  labels_list.html  labels_update.html
task_manager/statuses/: forms.py  models.py  urls.py  views.py
task_manager/statuses/migrations/: 0001_initial.py
task_manager/statuses/templates/: status_create.html  status_delete.html  status_list.html  status_update.html
task_manager/tasks/: filters.py  forms.py  mixins.py  models.py  urls.py  views.py
task_manager/tasks/migrations/: 0001_initial.py  0002_task_label.py  0003_remove_task_label_membership_task_label_set.py  0004_rename_label_set_task_labels.py
task_manager/tasks/templates/: tasks_create.html  tasks_delete.html  tasks_detail.html  tasks_list.html  tasks_update.html
task_manager/templates/: application.html  index.html  login.html
task_manager/tests/: test_labels.py  test_statuses.py  test_tasks.py  test_users.py  utils.py
task_manager/users/: forms.py  mixins.py  models.py  urls.py  views.py
task_manager/users/templates/: users_create.html  users_delete.html  users_list.html  users_update.html
